--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="name-photo">
 
-                    <img src="/me.jpg" alt="">
+                    <img src="me.jpg" alt="">
                     <h2>mahmoud abbas</h2>  
                     <p>computer eng</p>
 
